# SingleStopCoffea

./: .gitignore  .sites_map.json  DataMuon2022PostEE.yaml  DataMuon2022PreEE.yaml  MiniAnalysis.ipynb  NN coffea.ipynb  NNAnalyzer.ipynb  NN_jet_matching.ipynb  QCD-nEvents.sh  QCD2022.yaml  README.md  README.org  analyzer_test.ipynb  bgsculpting.ipynb  check_bnn_correction.py  common.py  convert.py  cuts.py  data-nEvents.sh  datasets.py  hist2d.ipynb  histograms.py  iterative_gaussian_fit.ipynb  jetMatcherNN_100_strat_newcuts.pt  jetMatcherNN_100_strat_newcuts_traced.pt  jetMatcherNN_cut_point4.pt  jetMatcherNN_cut_point4_traced.pt  jetMatcherNN_cut_point5.pt  jetMatcherNN_cut_point5_traced.pt  jetMatcherNN_full_uncomp.pt  jetMatcherNN_highly_uncomp.pt  jetMatcherNN_highly_uncomp_traced.pt  jetMatcherNN_uncomp.pt  jetMatcherNN_uncomp_traced.pt  jets_1500_900.csv  matching.py  minimal broken example.ipynb  n-1Plotter.py  n-1SimplePlotter.py  nEvents-datamuon2023.sh  (+23 more)
analyzer/: .plotter.py.swp  __init__.py  __main__.py  chunk_runner.py  cli.py  clients.py  configuration.py  core.py  datasets.py  file_utils.py  histogram_builder.py  inspect.py  logging.py  matching.py  math_funcs.py  objects.py  plotter.py  process.py  run_analysis.py  skim.py  test.py  utils.py
coffeaenv/: pyvenv.cfg
configurations/: bnn_test.yaml  core_analysis.yaml  data_mc_comp.yaml  datavmc2023_singletriggers.yaml  datavmc_sf.yaml  dijetanalysis.yaml  examine_2022postMC.yaml  example.yaml  h-gen.yaml  h-test.yaml  h.yaml  h_nn.yaml  local_test.yaml  post.yaml  qcd_signal.yaml  signal_efficiency_comparison.yaml  signal_region.yaml  signal_work.yaml  single_lep.yaml  test_config.yaml  testing.yaml  trig_post.yaml  trigger_data.yaml  trigger_eff.yaml  trigger_test.yaml
datasets/: .nfs0000001e2458de390000037c  DataMuon2022PostEE.yaml  DataMuon2022PreEE.yaml  DataMuon2023.yaml  DataSingleMuon.yaml  Diboson2018.yaml  QCD.yaml  QCD2018.yaml  QCDBEnriched.yaml  QCDBEnriched2018.yaml  QCDInclusive2017.yaml  QCDInclusive2018.yaml  QCDInclusive2023.yaml  QCDInclusize2018.yaml  QCDTest.yaml  RPV.yaml  STHadronic2018.yaml  TTToHadronic.yaml  TTToHadronic2018.yaml  WJetsToQQ2018.yaml  ZJetsToNuNu2018.yaml  ZJetsToQQ2018.yaml  cr0b_skims.yaml  data2016.yaml  data2017.yaml  data2018-4.yaml  data2018.yaml  data20181.yaml  data2022D-4.yaml  data2022D.yaml  data2022D1.yaml  data2022postEE.yaml  data2022preEE.yaml  data2023.yaml  dataMuon2022D.yaml  dataSingleMuon2016.yaml  (+7 more)
(+556 files in other folders)
